tests/kiama/negative/type_errors/L4/11_badrecord8.ob
MODULE badrecord8;

TYPE
    arecord2 = RECORD f : BOOLEAN; x : INTEGER END;

VAR
    rec1 : arecord2;
    anint : INTEGER;
    
BEGIN
    anint := rec1.f
END badrecord8.
